# SiLabs_Zephyr_KeyFob

./: .gitignore  CMakeLists.txt  README.md  guide.md  main.c  prj.conf  sysbuild.conf
_ASW/: CMakeLists.txt  main.c
_ASW/_APP_LOG/: AppLog.h
_ASW/_BLE/: ConnectionHandling.c  ConnectionHandling.h
_ASW/_BLE_GENERIX/: AppearanceValues.h  BaseUUIDs.h
_ASW/_CSR/: CSR_Generator.c  CSR_Generator.h  CSR_Generator_Config.h  CSR_Generator_Types.h  DER.c  DER.h
_ASW/_DEVICE_CERT/: DeviceCert.c  DeviceCert.h  DeviceCert_Config.h  DeviceCert_Types.h
_ASW/_GATT_CB/: GATT_CB_Types.h  GATT_GenericCallbacks.c  GATT_GenericCallbacks.h
_ASW/_GATT_DB/: CMakeLists.txt  GATT_DB_Types.h
_ASW/_GATT_DB/_DEVICE_INFO/: DeviceInfo.c  DeviceInfo.h
_ASW/_GATT_DB/_DEVICE_PROVISIONING/: DeviceProvisioning.c  DeviceProvisioning.h  DeviceProvisioning.xml
_ASW/_GATT_DB/_GAP/: GAP.c  GAP.h
_ASW/_GATT_DB/_OOB_PAIRING/: OOBPairing.c  OOBPairing.h  OOBPairing.xml
_ASW/_GATT_FLOW/: GattFlow.c  GattFlow.h
_DOC/BLE UUIDs/: appearance_values.yaml
boards/batl_vcu_keyfob/: Kconfig.batl_vcu_keyfob  Kconfig.defconfig  batl_vcu_keyfob.dts  batl_vcu_keyfob_defconfig  board.cmake  board.yml
